# satsolver

./: .gitignore  CMakeLists.txt  EXPERIENCES  LICENSE  Makefile  README  README.md  build.sh  build_debug.sh  check_result.py  clean.sh  generator.ml  generator_random.ml  main  run-test.clauses.nclause.sh  run-test.clauses.nvar.sh  run-test.formulae.depth.sh  run-test.graph.nvar.sh  run-test.sh  script-plot.p
benchmarks/: clauses.nclause.sh  clauses.nvar.sh  clauses.nvar_3SAT.sh  clauses.nvar_5SAT.sh  difference_logic.depth.sh  equality_logic.depth.sh  formulae.depth.sh  graph.nvar.sh  script-plot.p
examples/: diff_theory.txt  ex1-sat.cnf  ex1.col  ex2-sat.cnf  ex3-sat.cnf  ex4-unsat.cnf  ex5-sat.cnf  ex6-unsat.cnf  simple.cnf  simple2.cnf  strange-unsat.cnf
src/: config.h  dpll.cpp  dpll.h  main.cpp  parser.cpp  parser.h  solver_main.cpp  solver_main.h  structures.cpp  structures.h  utils.h
src/entry_points/: colorie.cpp  resol-wl.cpp  resol.cpp  resol_common.cpp  resol_common.h  resol_diff.cpp  resol_equal.cpp  tseitin.cpp
src/parsers/: abstract.cpp  abstract.h  cli.cpp  cli.h  congruence.l  congruence.y  difference.l  difference.y  equality.l  equality.y  extended_formula.l  extended_formula.y  graph.cpp  graph.h  sat.cpp  sat.h
src/solvers/: abstract_assistant.h  congruence_assistant.cpp  congruence_assistant.h  difference_assistant.cpp  difference_assistant.h  dpll.cpp  dpll.h  equality_assistant.cpp  equality_assistant.h  extended_formula.cpp  extended_formula.h  graphcolor.cpp  graphcolor.h  tseitin.cpp  tseitin.h  void_assistant.cpp  void_assistant.h
src/structures/: CL_proof.cpp  CL_proof.h  adj_graph.cpp  adj_graph.h  affectation.cpp  affectation.h  clause.cpp  clause.h  color_affectation.cpp  color_affectation.h  congruence_atom.cpp  congruence_atom.h  deductions.cpp  deductions.h  difference_atom.cpp  difference_atom.h  equality_atom.cpp  equality_atom.h  extended_formula.cpp  extended_formula.h  formula.cpp  formula.h  formula_with_WL.cpp  formula_with_WL.h  graph.cpp  graph.h  union_find.cpp  union_find.h
tests/: dpll_tests.cpp  dpll_tests.h  graphparser_tests.cpp  graphparser_tests.h  graphsolver_tests.cpp  graphsolver_tests.h  heuristics_tests.cpp  heuristics_tests.h  main.cpp  parser_tests.cpp  parser_tests.h  satparser_tests.cpp  satparser_tests.h  structures_tests.cpp  structures_tests.h  theory_tests.cpp  theory_tests.h
